added privacy controll

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 /fileJson/simbolbuyed.json
 /fileJson/simbolScheduled.json
 /fileJson/updatingPrice.json
+/fileJson/imbattibili.txt
+
+/bat/ca.pem
+/bat/error.log
+
+ca.pem
